project section updated

--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
       <!-- Project Card -->
       <div class="project-card">
         <div class="project-card__image">
-          <img src="assets/bootstrap-icon.png" alt="Proje 1 ekran görüntüsü" />
+          <img src="assets/taskly.png" alt="Proje 1 ekran görüntüsü" />
         </div>
 
         <div class="project-card__content">
           <h3 class="project-card__name">Task Manager Website</h3>
           <ul class="project-card__tech">
             <li>React</li>
-            <li>SCSS</li>
-            <li>API</li>
+            <li>Tailwind</li>
+            <li>Redux</li>
           </ul>
           <a href="https://proje1.vercel.app" target="_blank" class="project-card__visit">Projeyi Ziyaret Et</a>
         </div>
         
         <div class="project-card__github">
-          <a href="#" target="_blank" aria-label="GitHub kodları">
+          <a href="https://github.com/feyzanrsnr/Task_Manager_Website" target="_blank" aria-label="GitHub kodları">
             <i class="fa-brands fa-square-github"></i>
           </a>
         </div>
