project link added

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <li>Tailwind</li>
             <li>Redux</li>
           </ul>
-          <a href="https://proje1.vercel.app" target="_blank" class="project-card__visit">Projeyi Ziyaret Et</a>
+          <a href="https://taskly-task-manager-website.vercel.app/" target="_blank" class="project-card__visit">Projeyi Ziyaret Et</a>
         </div>
         
         <div class="project-card__github">
